more header stuff

--- a/P1/index.html
+++ b/P1/index.html
@@ -12,12 +12,13 @@
 <body>
     <header> 
         <nav>
-            <img id="home" src="home.png" alt="Avatar">
+            <a href="index.html"><img id="home" src="home.png" alt="Avatar"></a>
             <a href="index.html" id="curr" class="header_links">Restify</a>
             <div class="search">
                 <input type="text"  id="search" class="header_links" placeholder="Search..">
                 <button>Search</button>
             </div>
+            <img id="notif" src="notif.png" alt="Avatar">
             <img id="user" src="user.png" alt="Avatar">
         </nav>
     </header>
