--- a/P1/index.html
+++ b/P1/index.html
@@ -6,25 +6,34 @@
     <title>Restify</title>
     <link id="head_image" rel="icon" type="images/x-icon" href="home.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header> 
-        <nav>
-            <div class="horizontal center">
-                <a href="index.html"><img id="home" src="home.png" alt="Avatar"></a>
-                <a href="index.html" id="curr" class="header_links">Restify</a>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+            <a href="index.html"><img id="home" src="home.png" alt="Avatar"></a>
+              <a class="navbar-brand" href="index.html">Restify</a>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                  </li>
+                </ul>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+                <i class="bi bi-bell-fill m-1 w-150"></i>
+                <i class="bi bi-person-fill m-1 w-150"></i>
+              </div>
             </div>
-            <div class="horizontal">
-                <div class="search m-1">
-                    <input type="text"  id="search" class="header_links" placeholder="Search..">
-                    <button>Search</button>
-                </div>
-                <img id="notif" src="notif.png" alt="Avatar" class="m-1">
-                <img id="user" src="user.png" alt="Avatar" class="m-1">
-            </div>
-        </nav>
+          </nav>
     </header>
 </body>
 </html>
