--- a/P1/index.html
+++ b/P1/index.html
@@ -14,7 +14,7 @@
     <header> 
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-            <a href="index.html"><img id="home" src="home.png" alt="Avatar"></a>
+            <a href="index.html"><img id="home" src="home.png" alt="Logo"></a>
               <a class="navbar-brand" href="index.html">Restify</a>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
