some parts of logout

--- a/P1/sign-out.html
+++ b/P1/sign-out.html
@@ -26,25 +26,19 @@
                     <li class="nav-item">
                       <a class="nav-link" href="#">Link</a>
                     </li>
-                  </ul>
-                  <form class="form-inline ml-lg-10 translate-middle-x">
-                    <input class="form-control" type="search" placeholder="Search..">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                  </form>
-                    <i class="bi bi-bell-fill m-1 w-150 fs-3"></i>
-                    <div class="dropdown">
-                      <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
-                        <i class="bi bi-person-fill m-1 w-150 fs-3"></i>
-                      </a>
-                      <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">My Profile</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="sign-out.html">Sign Out</a></li>
-                      </ul>
-                    </div>                  
+                  </ul>                
                 <!-- </div> -->
               </div>
           </nav>
       </header>
+      <div class="page">
+        <div class="card">
+            <img src="home.png" class="card-img-top">
+            <div class="card-body">
+              <h5 class="card-title">You have been logged out </h5>
+              <a href="#" class="btn btn-primary">Log in</a>
+            </div>
+          </div>
+      </div>
   </body>
 </html>
