more login/ signout

--- a/P1/logged-in.html
+++ b/P1/logged-in.html
@@ -14,8 +14,8 @@
       <header> 
           <nav class="navbar navbar-expand-lg bg-body-tertiary">
               <div class="container-fluid">
-              <a class="nav-link active" href="index.html" ><img id="home" src="home.png" alt="Logo"></a>
-              <a class="navbar-brand me-auto" href="index.html">Restify</a>
+              <a class="nav-link active" href="logged-in.html" ><img id="home" src="home.png" alt="Logo"></a>
+              <a class="navbar-brand me-auto" href="logged-in.html">Restify</a>
                 <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
                   <!-- <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -28,8 +28,8 @@
                     </li>
                   </ul> -->
                   <form class="form-inline ml-lg-10 translate-middle-x">
-                    <div><input class="form-control" type="search" placeholder="Search.."></div>
-                    <div><button class="btn btn-outline-success" type="submit">Search</button></div>
+                    <input class="form-control" type="search" placeholder="Search..">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
                   </form>
                     <i class="bi bi-bell-fill m-1 w-150 fs-3"></i>
                     <div class="dropdown">
@@ -37,9 +37,9 @@
                         <i class="bi bi-person-fill m-1 w-150 fs-3"></i>
                       </a>
                       <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="login.html">Log In</a></li>
+                        <li><a class="dropdown-item" href="#">My Profile</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="sign-up.html">Sign Up</a></li>
+                        <li><a class="dropdown-item" href="index.html">Sign Out</a></li>
                       </ul>
                     </div>                  
                 <!-- </div> -->
