fix search alignment

--- a/P1/logged-in.html
+++ b/P1/logged-in.html
@@ -27,9 +27,9 @@
                       <a class="nav-link" href="#">Link</a>
                     </li>
                   </ul> -->
-                  <form class="form-inline ml-lg-10 translate-middle-x">
-                    <input class="form-control" type="search" placeholder="Search..">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                  <form class="d-flex form-group">
+                    <div><input class="form-control m-1" type="search" placeholder="Search.."></div>
+                    <div><button class="btn btn-outline-primary m-1" type="submit">Search</button></div>
                   </form>
                     <i class="bi bi-bell-fill m-1 w-150 fs-3"></i>
                     <div class="dropdown">
