--- a/P1/index.html
+++ b/P1/index.html
@@ -13,35 +13,44 @@
   <body>
       <header> 
           <nav class="navbar navbar-expand-lg bg-body-tertiary">
-              <div class="container-fluid">
-              <a class="nav-link active" href="index.html" ><img id="home" src="home.png" alt="Logo"></a>
-              <a class="navbar-brand me-auto" href="index.html">Restify</a>
-                <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
-                  <!-- <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                      <a class="nav-link active" href="index.html">Home</a> -->
-                      <!-- aria-current="page" -->
-                    <!-- </li> -->
-                    <!-- CHANGE THIS TO OTHER LINKS -->
-                    <!-- <li class="nav-item">
-                      <a class="nav-link" href="#">Link</a>
-                    </li>
-                  </ul> -->
-                  <form class="d-flex form-group">
-                    <div><input class="form-control m-1" type="search" placeholder="Search.."></div>
-                    <div><button class="btn btn-outline-primary m-1" type="submit">Search</button></div>
-                  </form>
-                    <i class="bi bi-bell-fill m-1 w-150 fs-3"></i>
-                    <div class="dropdown">
-                      <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
-                        <i class="bi bi-person-fill m-1 w-150 fs-3"></i>
-                      </a>
-                      <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="login.html">Log In</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="sign-up.html">Sign Up</a></li>
-                      </ul>
-                    </div>                  
+              <div class="d-flex justify-content-between w-100 align-items-center">
+                <div class="d-flex align-items-center">
+                  <a class="nav-link active" href="index.html" ><img id="home" src="home.png" alt="Logo"></a>
+                  <a class="navbar-brand" href="index.html">Restify</a>
+                </div>
+                <div class="shadow-sm search-filter bg-white d-flex align-items-center p-1">
+                  <input type="text" placeholder="Location" class="form-control shadow-none border-0">
+                  <input type="text" placeholder="Check In" onblur="(this.type='text')" onclick="(this.type='date')" class="form-control shadow-none border-0 w-25">
+                  <input type="text" placeholder="Check Out" onblur="(this.type='text')" onclick="(this.type='date')" class="form-control shadow-none border-0 w-75">
+                  <input type="number" step="1" placeholder="Add Guests" class="form-control shadow-none border-0">
+                  <div><button class="btn btn-primary m-1 rounded-circle" type="submit"><i class="bi bi-search"></i></button></div>
+                </div>
+                <div class="d-flex align-items-center">
+                  <i class="bi bi-bell-fill m-1 w-150 fs-3"></i>
+                  <div class="dropdown">
+                  <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
+                    <i class="bi bi-person-fill m-4 w-150 fs-3"></i>
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="login.html">Log In</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="sign-up.html">Sign Up</a></li>
+                  </ul>
+                </div> 
+                </div>
+                                 
+                  <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
+                    <!-- <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active" href="index.html">Home</a> -->
+                        <!-- aria-current="page" -->
+                      <!-- </li> -->
+                      <!-- CHANGE THIS TO OTHER LINKS -->
+                      <!-- <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                      </li>
+                    </ul> -->
+                    
                 <!-- </div> -->
               </div>
           </nav>
