--- a/P1/index.html
+++ b/P1/index.html
@@ -31,7 +31,7 @@
                   <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
                     <i class="bi bi-person-fill m-4 w-150 fs-3"></i>
                   </a>
-                  <ul class="dropdown-menu">
+                  <ul class="dropdown-menu dropdown-menu-end">
                     <li><a class="dropdown-item" href="login.html">Log In</a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="sign-up.html">Sign Up</a></li>
