--- a/P1/logged-in.html
+++ b/P1/logged-in.html
@@ -28,13 +28,13 @@
             <div class="d-flex align-items-center">
               <i class="bi bi-bell-fill m-1 w-150 fs-3"></i>
               <div class="dropdown">
-              <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
-                <i class="bi bi-person-fill m-4 w-150 fs-3"></i>
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="login.html">Log In</a></li>
+                <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
+                  <i class="bi bi-person-fill m-4 w-150 fs-3"></i>
+                </a>
+              <ul class="dropdown-menu dropdown-menu-end">
+                <li><a class="dropdown-item" href="">Reservations</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="sign-up.html">Sign Up</a></li>
+                <li><a class="dropdown-item" href="">Log Out</a></li>
               </ul>
             </div> 
             </div>
