--- a/P1/logged-in.html
+++ b/P1/logged-in.html
@@ -31,7 +31,7 @@
                 <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
                   <i class="bi bi-person-fill m-4 w-150 fs-3"></i>
                 </a>
-              <ul class="dropdown-menu dropdown-menu-end">
+              <ul class="dropdown-menu dropdown-menu-end me-1">
                 <li><a class="dropdown-item" href="">Reservations</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="">Log Out</a></li>
