--- a/P1/logged-in.html
+++ b/P1/logged-in.html
@@ -20,8 +20,8 @@
             </div>
             <div class="shadow-sm search-filter bg-white d-flex align-items-center p-1">
               <input type="text" placeholder="Location" class="form-control shadow-none border-0">
-              <input type="text" placeholder="Check In" onblur="(this.type='text')" onclick="(this.type='date')" class="form-control shadow-none border-0 w-25">
-              <input type="text" placeholder="Check Out" onblur="(this.type='text')" onclick="(this.type='date')" class="form-control shadow-none border-0 w-75">
+              <input type="text" placeholder="Check In" onblur="(this.type='text')" onclick="(this.type='date')" class="form-control shadow-none border-0">
+              <input type="text" placeholder="Check Out" onblur="(this.type='text')" onclick="(this.type='date')" class="form-control shadow-none border-0">
               <input type="number" step="1" placeholder="Add Guests" class="form-control shadow-none border-0">
               <div><button class="btn btn-primary m-1 rounded-circle" type="submit"><i class="bi bi-search"></i></button></div>
             </div>
