--- a/P1/logged-in.html
+++ b/P1/logged-in.html
@@ -34,6 +34,8 @@
               <ul class="dropdown-menu dropdown-menu-end me-1">
                 <li><a class="dropdown-item" href="">Reservations</a></li>
                 <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">My Profile</a></li>
+                <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="index.html">Log Out</a></li>
               </ul>
             </div> 
