--- a/P1/sign-up.html
+++ b/P1/sign-up.html
@@ -27,16 +27,29 @@
               <h5 class="card-title">Welcome to Restify</h5>
               <form>
                 <div class="mb-3">
+                    <label class="form-label">First name</label>
+                    <input class="form-control">
+                  </div>
+                  <div class="mb-3">
+                    <label class="form-label">Last name</label>
+                    <input class="form-control">
+                  </div>
+                <div class="mb-3">
                   <label for="exampleInputEmail1" class="form-label">Email address</label>
                   <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                 </div>
                 <div class="mb-3">
                   <label for="exampleInputPassword1" class="form-label">Password</label>
                   <input type="password" class="form-control" id="exampleInputPassword1">
+                  <div id="passwordHelpBlock" class="form-text">Your password must be 8-20 characters long</div>
                 </div>
                 <div class="mb-3">
                     <label for="exampleInputPassword2" class="form-label">Confirm Password</label>
                     <input type="password" class="form-control" id="exampleInputPassword2">
+                </div>
+                <div class="mb-3">
+                    <input class="form-check-input" type="checkbox">
+                    <label class="form-check-label">You agree to receive promotional content from Restify</label>
                 </div>
                 <a href="logged-in.html" class="btn btn-primary">Sign Up</a>
               </form>
