profile and sign up

--- a/P1/login.html
+++ b/P1/login.html
@@ -21,6 +21,7 @@
           </nav>
       </header>
       <div class="page">
+        <main>
         <div class="card">
             <img src="home.png" class="card-img-top">
             <div class="card-body">
@@ -40,6 +41,6 @@
             </div>
           </div>
       </div>
-      
+    </main>
   </body>
 </html>
