--- a/P1/sign-up.html
+++ b/P1/sign-up.html
@@ -21,6 +21,7 @@
           </nav>
       </header>
       <div class="page">
+        <main>
         <div class="card">
             <img src="home.png" class="card-img-top">
             <div class="card-body">
@@ -56,7 +57,7 @@
             <a href="login.html">Already have an account? Log in.</a>
             </div>
           </div>
+        </main>
       </div>
-      
   </body>
 </html>
