--- a/P1/signed-out.html
+++ b/P1/signed-out.html
@@ -32,13 +32,15 @@
           </nav>
       </header>
       <div class="page">
+        <main>
         <div class="card">
             <img src="home.png" class="card-img-top">
             <div class="card-body">
               <h5 class="card-title">You have been logged out </h5>
-              <a href="#" class="btn btn-primary">Log in</a>
+              <a href="login.html" class="btn btn-primary">Log in</a>
             </div>
           </div>
+        </main>
       </div>
   </body>
 </html>
