--- a/P1/search.html
+++ b/P1/search.html
@@ -40,5 +40,17 @@
               </div>
           </nav>
       </header>
+      <main>
+        <div class="card">
+            <img class="card-img-top" src="cabin.jpg" alt="Wooden cabin">
+            <div class="card-body">
+                <h5 class="card-title">Forks, Washington, US</h5>
+                <p class="card-text">4347 km away.</p>
+                <p class="card-text">Feb. 10-18</p>
+                <p class="card-text font-weight-bold">$400 CAD/night</p>
+                <a href="#" class="btn btn-primary">View more</a>
+            </div>
+        </div>
+      </main>
   </body>
 </html>
