--- a/P1/search.html
+++ b/P1/search.html
@@ -41,12 +41,64 @@
           </nav>
       </header>
       <main>
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary ms-3" data-bs-toggle="modal" data-bs-target="#filter">
+          <i class="bi bi-filter"></i>
+          Filters
+        </button>
+
+        <!-- Modal -->
+        <div class="modal fade" id="filter" tabindex="-1" aria-labelledby="filterlLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="filterLabel">Filters</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="close"></button>
+              </div>
+              <div class="modal-body">
+                <h3>
+                  Amenities
+                </h3>
+                <form class="d-flex flex-wrap justify-content-between">
+                  <div class="form-check w-50">
+                    <input class="form-check-input" type="checkbox" value="" id="wifi">
+                    <label class="form-check-label" for="wifi">
+                      Wifi
+                    </label>
+                  </div>
+                  <div class="form-check w-50">
+                    <input class="form-check-input" type="checkbox" value="" id="pool">
+                    <label class="form-check-label" for="pool">
+                      Pool
+                    </label>
+                  </div>
+                  <div class="form-check w-50">
+                    <input class="form-check-input" type="checkbox" value="" id="gym">
+                    <label class="form-check-label" for="gym">
+                      Gym
+                    </label>
+                  </div>
+                  <div class="form-check w-50">
+                    <input class="form-check-input" type="checkbox" value="" id="hot-tub">
+                    <label class="form-check-label" for="hot-tub">
+                      Hot tub
+                    </label>
+                  </div>
+                </form>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Clear All</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="search-results d-flex">
           <div class="card">
             <img class="card-img-top" src="cabin.jpg" alt="Wooden cabin">
             <div class="card-body">
                 <h5 class="card-title">Forks, Washington, US</h5>
-                <p class="card-text">4347 km away.</p>
+                <p class="card-text">4347 km away</p>
                 <p class="card-text">Feb. 10-18</p>
                 <p class="card-text font-weight-bold">$400 CAD/night</p>
                 <a href="#" class="btn btn-primary mt-1">View more</a>
@@ -56,7 +108,7 @@
             <img class="card-img-top" src="cabin.jpg" alt="Wooden cabin">
             <div class="card-body">
                 <h5 class="card-title">Forks, Washington, US</h5>
-                <p class="card-text">4347 km away.</p>
+                <p class="card-text">4347 km away</p>
                 <p class="card-text">Feb. 10-18</p>
                 <p class="card-text font-weight-bold">$400 CAD/night</p>
                 <a href="#" class="btn btn-primary mt-1">View more</a>
@@ -66,7 +118,7 @@
             <img class="card-img-top" src="cabin.jpg" alt="Wooden cabin">
             <div class="card-body">
                 <h5 class="card-title">Forks, Washington, US</h5>
-                <p class="card-text">4347 km away.</p>
+                <p class="card-text">4347 km away</p>
                 <p class="card-text">Feb. 10-18</p>
                 <p class="card-text font-weight-bold">$400 CAD/night</p>
                 <a href="#" class="btn btn-primary mt-1">View more</a>
@@ -76,7 +128,7 @@
             <img class="card-img-top" src="cabin.jpg" alt="Wooden cabin">
             <div class="card-body">
               <h5 class="card-title">Forks, Washington, US</h5>
-              <p class="card-text">4347 km away.</p>
+              <p class="card-text">4347 km away</p>
               <p class="card-text">Feb. 10-18</p>
               <p class="card-text font-weight-bold">$400 CAD/night</p>
               <a href="#" class="btn btn-primary mt-1">View more</a>
