--- a/P1/search.html
+++ b/P1/search.html
@@ -57,6 +57,40 @@
               </div>
               <div class="modal-body">
                 <h3>
+                  Price
+                </h3>
+                <form>
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="price" id="price-low-to-high">
+                    <label class="form-check-label" for="price-low-to-high">
+                      Low to high
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="price" id="price-high-to-low">
+                    <label class="form-check-label" for="price-high-to-low">
+                      High to low
+                    </label>
+                  </div>
+                </form>
+                <h3>
+                  Rating
+                </h3>
+                <form>
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="rating" id="rating-low-to-high">
+                    <label class="form-check-label" for="rating-low-to-high">
+                      Low to high
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="rating" id="rating-high-to-low">
+                    <label class="form-check-label" for="rating-high-to-low">
+                      High to low
+                    </label>
+                  </div>
+                </form>
+                <h3>
                   Amenities
                 </h3>
                 <form class="d-flex flex-wrap justify-content-between">
@@ -87,8 +121,7 @@
                 </form>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Clear All</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Save changes</button>
               </div>
             </div>
           </div>
