--- a/P1/search.html
+++ b/P1/search.html
@@ -128,7 +128,7 @@
         </div>
         <div class="search-results d-flex">
           <div class="card">
-            <img class="card-img-top" src="cabin.jpg" alt="Wooden cabin">
+            <img class="card-img-top" src="Edwards-House.jpg" alt="Wooden cabin">
             <div class="card-body">
                 <h5 class="card-title">Forks, Washington, US</h5>
                 <p class="card-text">4347 km away</p>
