--- a/P1/search.html
+++ b/P1/search.html
@@ -128,7 +128,7 @@
         </div>
         <div class="search-results d-flex">
           <div class="card">
-            <img class="card-img-top" src="Edwards-House.jpg" alt="Edward from Twiglight's house">
+            <img class="card-img-top" src="Edwards-House.jpg" alt="Edward's's house">
             <div class="card-body">
                 <h5 class="card-title">Forks, Washington, US</h5>
                 <p class="card-text">4347 km away</p>
@@ -138,12 +138,12 @@
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="cabin.jpg" alt="Wooden cabin">
+            <img class="card-img-top" src="bellas-house.jpeg" alt="Bella's house">
             <div class="card-body">
                 <h5 class="card-title">Forks, Washington, US</h5>
                 <p class="card-text">4347 km away</p>
                 <p class="card-text">Feb. 10-18</p>
-                <p class="card-text font-weight-bold">$400 CAD/night</p>
+                <p class="card-text font-weight-bold">$200 CAD/night</p>
                 <a href="#" class="btn btn-primary mt-1">View more</a>
             </div>
           </div>
