--- a/P1/profile.html
+++ b/P1/profile.html
@@ -15,7 +15,7 @@
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="d-flex justify-content-between w-100 align-items-center">
             <div class="d-flex align-items-center">
-              <a class="nav-link active" href="logged-in.html" ><img id="home" src="home.png" alt="Logo"></a>
+              <a class="nav-link active" href="logged-in.html" ><img id="home" src="images/home.png" alt="Logo"></a>
               <a class="navbar-brand" href="logged-in.html">Restify</a>
             </div>
             <div class="d-flex align-items-center">
@@ -41,7 +41,7 @@
         <div id="profile">
             <h1>My Profile</h1>
             <div>
-                <img src="me.jpg" id="me" class="img-fluid mx-auto d-block" alt="Avatar">
+                <img src="images/me.jpg" id="me" class="img-fluid mx-auto d-block" alt="Avatar">
             </div>
         </div>
     </main>
