--- a/P1/search.html
+++ b/P1/search.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Restify</title>
-      <link id="head_image" rel="icon" type="images/x-icon" href="home.png" />
+      <link id="head_image" rel="icon" type="images/x-icon" href="images/home.png" />
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
@@ -15,7 +15,7 @@
           <nav class="navbar navbar-expand-lg bg-body-tertiary">
               <div class="d-flex justify-content-between w-100 align-items-center">
                 <div class="d-flex align-items-center">
-                  <a class="nav-link active" href="index.html" ><img id="home" src="home.png" alt="Logo"></a>
+                  <a class="nav-link active" href="index.html" ><img id="home" src="images/home.png" alt="Logo"></a>
                   <a class="navbar-brand" href="index.html">Restify</a>
                 </div>
                 <div class="shadow-sm search-filter bg-white d-flex align-items-center p-1">
@@ -128,7 +128,7 @@
         </div>
         <div class="search-results d-flex">
           <div class="card">
-            <img class="card-img-top" src="Edwards-House.jpg" alt="Edward's house">
+            <img class="card-img-top" src="images/Edwards-House.jpg" alt="Edward's house">
             <div class="card-body">
                 <h5 class="card-title">Forks, Washington, US</h5>
                 <p class="card-text">4347 km away</p>
@@ -138,7 +138,7 @@
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="bellas-house.jpeg" alt="Bella's house">
+            <img class="card-img-top" src="images/bellas-house.jpeg" alt="Bella's house">
             <div class="card-body">
                 <h5 class="card-title">Forks, Washington, US</h5>
                 <p class="card-text">4347 km away</p>
@@ -148,7 +148,7 @@
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="cabin.jpg" alt="Wooden cabin">
+            <img class="card-img-top" src="images/cabin.jpg" alt="Wooden cabin">
             <div class="card-body">
                 <h5 class="card-title">Forks, Washington, US</h5>
                 <p class="card-text">4347 km away</p>
@@ -158,7 +158,7 @@
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="cabin.jpg" alt="Wooden cabin">
+            <img class="card-img-top" src="images/cabin.jpg" alt="Wooden cabin">
             <div class="card-body">
               <h5 class="card-title">Forks, Washington, US</h5>
               <p class="card-text">4347 km away</p>
