--- a/P1/logged-in.html
+++ b/P1/logged-in.html
@@ -15,7 +15,7 @@
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="d-flex justify-content-between w-100 align-items-center">
             <div class="d-flex align-items-center">
-              <a class="nav-link active" href="logged-in.html" ><img id="home" src="home.png" alt="Logo"></a>
+              <a class="nav-link active" href="logged-in.html" ><img id="home" src="images/home.png" alt="Logo"></a>
               <a class="navbar-brand" href="logged-in.html">Restify</a>
             </div>
             <div class="shadow-sm search-filter bg-white d-flex align-items-center p-1">
