--- a/P1/login.html
+++ b/P1/login.html
@@ -14,7 +14,7 @@
       <header> 
           <nav class="navbar navbar-expand-lg bg-body-tertiary">
               <div class="container-fluid">
-              <a class="nav-link active" href="log-in.html" ><img id="home" src="home.png" alt="Logo"></a>
+              <a class="nav-link active" href="log-in.html" ><img id="home" src="images/home.png" alt="Logo"></a>
               <a class="navbar-brand me-auto" href="log-in.html">Restify</a>          
                 <!-- </div> -->
               </div>
@@ -23,7 +23,7 @@
       <div class="page">
         <main>
         <div class="card">
-            <img src="home.png" class="card-img-top">
+            <img src="images/home.png" class="card-img-top">
             <div class="card-body">
               <h5 class="card-title">Welcome to Restify</h5>
               <form>
