--- a/P1/signed-out.html
+++ b/P1/signed-out.html
@@ -14,7 +14,7 @@
       <header> 
           <nav class="navbar navbar-expand-lg bg-body-tertiary">
               <div class="container-fluid">
-              <a class="nav-link active" href="index.html" ><img id="home" src="home.png" alt="Logo"></a>
+              <a class="nav-link active" href="index.html" ><img id="home" src="images/home.png" alt="Logo"></a>
               <a class="navbar-brand" href="index.html">Restify</a>
                 <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
                   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -34,7 +34,7 @@
       <div class="page">
         <main>
         <div class="card">
-            <img src="home.png" class="card-img-top">
+            <img src="images/home.png" class="card-img-top">
             <div class="card-body">
               <h5 class="card-title">You have been logged out </h5>
               <a href="login.html" class="btn btn-primary">Log in</a>
