--- a/P1/search.html
+++ b/P1/search.html
@@ -134,7 +134,7 @@
                 <p class="card-text">4347 km away</p>
                 <p class="card-text">Feb. 10-18</p>
                 <p class="card-text font-weight-bold">$400 CAD/night</p>
-                <a href="#" class="btn btn-primary mt-1">View more</a>
+                <a href="property.html" class="btn btn-primary mt-1">View more</a>
             </div>
           </div>
           <div class="card">
