--- a/P1/login.html
+++ b/P1/login.html
@@ -14,8 +14,8 @@
       <header> 
           <nav class="navbar navbar-expand-lg bg-body-tertiary">
               <div class="container-fluid">
-              <a class="nav-link active" href="log-in.html" ><img id="home" src="images/home.png" alt="Logo"></a>
-              <a class="navbar-brand me-auto" href="log-in.html">Restify</a>          
+              <a class="nav-link active" href="index.html" ><img id="home" src="images/home.png" alt="Logo"></a>
+              <a class="navbar-brand me-auto" href="index.html">Restify</a>          
                 <!-- </div> -->
               </div>
           </nav>
