--- a/P1/property.html
+++ b/P1/property.html
@@ -41,7 +41,14 @@
           </nav>
       </header>
       <main>
-
+        <h1>
+            Private isolated mansion (300 acres)
+        </h1>
+        <div class="grid-container">
+            <img class="grid-item" id="main-img" src="images/Edwards-House.jpg" alt="Outside of the mansion">
+            <img class="grid-item" id="kitchen-img" src="images/cullen_kitchen.jpg" alt="Kitchen">
+            <img class="grid-item" id="living-img" src="images/cullen_living_room.jpg" alt="Living room">
+        </div>
       </main>
   </body>
 </html>
