--- a/P1/property.html
+++ b/P1/property.html
@@ -49,6 +49,9 @@
             <img class="grid-item" id="kitchen-img" src="images/cullen_kitchen.jpg" alt="Kitchen">
             <img class="grid-item" id="living-img" src="images/cullen_living_room.jpg" alt="Living room">
         </div>
+        <p>
+            Caution we're legally required
+        </p>
       </main>
   </body>
 </html>
