--- a/P1/login.html
+++ b/P1/login.html
@@ -22,9 +22,9 @@
       </header>
       <div class="page">
         <main>
-        <div class="card">
+        <div class="card log-stuff">
             <img src="images/home.png" class="card-img-top">
-            <div class="card-body">
+            <div class="card-body logs">
               <h5 class="card-title">Welcome to Restify</h5>
               <form>
                 <div class="mb-3">
