--- a/P1/profile.html
+++ b/P1/profile.html
@@ -39,10 +39,11 @@
   <div class="page">
     <main>
         <div id="profile">
-            <h1>My Profile</h1>
+            <h1>Edward Cullen</h1>
             <div>
-                <img src="images/me.jpg" id="me" class="img-fluid mx-auto d-block" alt="Avatar">
+                <img src="images/edwards.png" id="me" class="img-fluid mx-auto d-block" alt="Avatar">
             </div>
+            <h5> "I'm the world's most dangerous predator. Everything about me invites you in."</h5>
         </div>
     </main>
         </div>
