--- a/P1/signed-out.html
+++ b/P1/signed-out.html
@@ -15,15 +15,15 @@
           <nav class="navbar navbar-expand-lg bg-body-tertiary">
               <div class="container-fluid">
               <a class="nav-link active" href="index.html" ><img id="home" src="images/home.png" alt="Logo"></a>
-              <a class="navbar-brand" href="index.html">Restify</a>
+              <a class="navbar-brand  me-auto" href="index.html">Restify</a>
               </div>
           </nav>
       </header>
       <div class="page">
         <main>
-        <div class="card">
+        <div class="card log-stuff">
             <img src="images/home.png" class="card-img-top">
-            <div class="card-body">
+            <div class="card-body logs">
               <h5 class="card-title">You have been logged out </h5>
               <a href="login.html" class="btn btn-primary">Log in</a>
             </div>
