--- a/P1/search.html
+++ b/P1/search.html
@@ -40,7 +40,7 @@
               </div>
           </nav>
       </header>
-      <main>
+      <main id="search-screen">
         <!-- Button trigger modal -->
         <button type="button" class="btn btn-primary ms-3" data-bs-toggle="modal" data-bs-target="#filter">
           <i class="bi bi-filter"></i>
@@ -126,7 +126,7 @@
             </div>
           </div>
         </div>
-        <div class="search-results d-flex">
+        <div class="search-results d-flex flex-wrap">
           <div class="card">
             <img class="card-img-top" src="images/Edwards-House.jpg" alt="Edward's house">
             <div class="card-body">
