--- a/P1/login.html
+++ b/P1/login.html
@@ -23,7 +23,7 @@
       <div class="page">
         <main>
         <div class="card log-stuff">
-            <img src="images/home.png" class="card-img-top">
+            <img src="images/home.png" class="card-img-top sign-up-image">
             <div class="card-body logs">
               <h5 class="card-title">Welcome to Restify</h5>
               <form>
