--- a/P1/sign-up.html
+++ b/P1/sign-up.html
@@ -22,37 +22,41 @@
       </header>
       <div class="page">
         <main>
-        <div class="card log-stuff">
-            <img src="images/home.png" class="card-img-top">
+        <div class="card w-500 log-stuff register">
+            <img src="images/home.png" class="card-img-top sign-up-image">
             <div class="card-body logs">
               <h5 class="card-title">Welcome to Restify</h5>
               <form>
                 <div class="mb-3">
                     <label class="form-label">First name</label>
-                    <input class="form-control">
+                    <input class="form-control" type="text" required/>
                   </div>
                   <div class="mb-3">
                     <label class="form-label">Last name</label>
-                    <input class="form-control">
+                    <input class="form-control" type="text" required/>
                   </div>
                 <div class="mb-3">
-                  <label for="exampleInputEmail1" class="form-label">Email address</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  <label class="form-label">Email address</label>
+                  <input type="email" class="form-control" aria-describedby="emailHelp" required/>
                 </div>
                 <div class="mb-3">
-                  <label for="exampleInputPassword1" class="form-label">Password</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1">
-                  <div id="passwordHelpBlock" class="form-text">Your password must be 8-20 characters long</div>
+                  <label class="form-label">Password</label>
+                  <input type="password" class="form-control" required/>
+                  <div class="form-text">Your password must be 8-20 characters long</div>
                 </div>
                 <div class="mb-3">
-                    <label for="exampleInputPassword2" class="form-label">Confirm Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword2">
+                    <label class="form-label">Confirm Password</label>
+                    <input type="password" class="form-control" required/>
                 </div>
                 <div class="mb-3">
                     <input class="form-check-input" type="checkbox">
-                    <label class="form-check-label">You agree to receive promotional content from Restify</label>
+                    <label class="form-check-label">I agree to receive promotional content from Restify</label>
                 </div>
-                <a href="logged-in.html" class="btn btn-primary">Sign Up</a>
+                <div class="mb-3">
+                  <input class="form-check-input" type="checkbox" required/>
+                  <label class="form-check-label">I agree to the <a href="#">Restify Terms</a> </label>
+                </div>
+                <a href="logged-in.html" type="submit" class="btn btn-primary">Sign Up</a>
               </form>
             <a href="login.html">Already have an account? Log in.</a>
             </div>
