more log in sign up stuff

--- a/P1/login.html
+++ b/P1/login.html
@@ -26,16 +26,16 @@
             <img src="images/home.png" class="card-img-top sign-up-image">
             <div class="card-body logs">
               <h5 class="card-title">Welcome to Restify</h5>
-              <form>
+              <form action="logged-in.html">
                 <div class="mb-3">
-                  <label for="exampleInputEmail1" class="form-label">Email address</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  <label class="form-label">Email address</label>
+                  <input type="email" class="form-control" aria-describedby="emailHelp" required />
                 </div>
                 <div class="mb-3">
-                  <label for="exampleInputPassword1" class="form-label">Password</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1">
+                  <label class="form-label">Password</label>
+                  <input type="password" class="form-control" required />
                 </div>
-                <a href="logged-in.html" class="btn btn-primary">Log in</a>
+                <input class="btn btn-primary" type="submit" value="Log In" />
               </form>
             <a href="sign-up.html">Don't have an account? Create an account.</a>
             </div>
