--- a/P1/sign-up.html
+++ b/P1/sign-up.html
@@ -26,7 +26,7 @@
             <img src="images/home.png" class="card-img-top sign-up-image">
             <div class="card-body logs">
               <h5 class="card-title">Welcome to Restify</h5>
-              <form>
+              <form action="logged-in.html">
                 <div class="mb-3">
                     <label class="form-label">First name</label>
                     <input class="form-control" type="text" required/>
@@ -56,7 +56,7 @@
                   <input class="form-check-input" type="checkbox" required/>
                   <label class="form-check-label">I agree to the <a href="#">Restify Terms</a> </label>
                 </div>
-                <a href="logged-in.html" type="submit" class="btn btn-primary">Sign Up</a>
+                <input class="btn btn-primary" type="submit" value="Sign Up" />
               </form>
             <a href="login.html">Already have an account? Log in.</a>
             </div>
