--- a/P1/sign-up.html
+++ b/P1/sign-up.html
@@ -54,7 +54,44 @@
                 </div>
                 <div class="mb-3">
                   <input class="form-check-input" type="checkbox" required/>
-                  <label class="form-check-label">I agree to the <a href="#">Restify Terms</a> </label>
+                  <label class="form-check-label">I agree to the <a href="#Modal" data-bs-toggle="modal" data-bs-target="#Modal">Restify Terms</a> </label>
+                  <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h1 class="modal-title fs-5" id="exampleModalLabel">Terms and Conditions</h1>
+                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                          <!-- (n.d.). Free Terms and Conditions Template & Examples [Download Now]. Retrieved from https://www.websitepolicies.com/blog/sample-terms-conditions-template -->
+                         <p>Please read these terms and conditions ("terms and conditions", "terms") carefully before using Restify.ca website (“website”, "service") operated by Restify ("us", 'we", "our").</p> 
+                        <h5>Conditions of use</h5>
+                        <p>By using this website, you certify that you have read and reviewed this Agreement and that you agree to comply with its terms. If you do not want to be bound by the terms of this Agreement, you are advised to stop using the website accordingly. Restify only grants use and access of this website, its products, and its services to those who have accepted its terms.</p>
+                        <h5>Age restriction</h5>
+                        <p>You must be at least 18 (eighteen) years of age before you can use this website. By using this website, you warrant that you are at least 18 years of age and you may legally adhere to this Agreement. Restify assumes no responsibility for liabilities related to age misrepresentation.</p>
+                        <h5>Intellectual property</h5>
+                        <p>You agree that all materials, products, and services provided on this website are the property of Restify, its affiliates, directors, officers, employees, agents, suppliers, or licensors including all copyrights, trade secrets, trademarks, patents, and other intellectual property. You also agree that you will not reproduce or redistribute the Restify&#39;s intellectual property in any way, including electronic, digital, or new trademark registrations.
+                          You grant Restify a royalty-free and non-exclusive license to display, use, copy, transmit, and broadcast the content you upload and publish. For issues regarding intellectual property claims, you should contact the company in order to come to an agreement.
+                        </p>
+                        <h5>User accounts</h5>
+                        <p>As a user of this website, you may be asked to register with us and provide private information. You are responsible for ensuring the accuracy of this information, and you are responsible for maintaining the safety and security of your identifying information. You are also responsible for all activities that occur under your account or password.
+                          If you think there are any possible issues regarding the security of your account on the website, inform us immediately so we may address them accordingly.
+                          We reserve all rights to terminate accounts and edit or remove content at our sole discretion.
+                          </p>
+                        <h5>Applicable law</h5>
+                        <p>By using this website, you agree that the laws of Canada, without regard to principles of conflict laws, will govern these terms and conditions, or any dispute of any sort that might come between Restify and you, or its business partners and associates.</p>
+                        <h5>Disputes</h5>
+                        <p>Any dispute related in any way to your use of this website or to products you purchase from us shall be arbitrated by state or federal court Canada and you consent to exclusive jurisdiction and venue of such courts.</p>
+                        <h5>Indemnification</h5>
+                        <p>You agree to indemnify Restify and its affiliates and hold Restify harmless against legal claims and demands that may arise from your use or misuse of our services. We reserve the right to select our own legal counsel. </p>
+                        <h5>Limitation on liability</h5>
+                        <p>Restify is not liable for any damages that may occur to you as a result of your misuse of our website.
+                          Restify reserves the right to edit, modify, and change this Agreement at any time. We shall let our users know of these changes through electronic mail. This Agreement is an understanding between Restify and the user, and this supersedes and replaces all prior agreements regarding the use of this website.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <input class="btn btn-primary" type="submit" value="Sign Up" />
               </form>
