--- a/P1/sign-up.html
+++ b/P1/sign-up.html
@@ -40,12 +40,16 @@
                   <input type="email" class="form-control" aria-describedby="emailHelp" required/>
                 </div>
                 <div class="mb-3">
+                  <label class="form-label">Phone number</label>
+                  <input type="number" class="form-control" required/>
+                </div>
+                <div class="mb-3">
                   <label class="form-label">Password</label>
                   <input type="password" class="form-control" required/>
                   <div class="form-text">Your password must be 8-20 characters long</div>
                 </div>
                 <div class="mb-3">
-                    <label class="form-label">Confirm Password</label>
+                    <label class="form-label">Confirm password</label>
                     <input type="password" class="form-control" required/>
                 </div>
                 <div class="mb-3">
