added photo functionality

--- a/P1/add-new-property.html
+++ b/P1/add-new-property.html
@@ -59,8 +59,6 @@
               </div>
               <div class="vr" id="v-bar"></div>
               <div id="property-info-wrapper">
-                <div id="photos">
-                </div>
                 <div id="property-main-info">
                   <h5>Listing Information</h5>
                   <form action="#" method="PUT">
@@ -100,8 +98,22 @@
                       <label for="amenities">Amenities</label>
                       <textarea type="text" class="form-control" id="amenities" placeholder="What's nearby?"></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary submit-btn">Update</button>
+                    <button type="submit" class="btn btn-success submit-btn">Create</button>
                   </form>
+                </div>
+                <hr class="hr" /> 
+                <div id="photos">
+                  <div>
+                    <h5>Photos</h5>
+                    <ul class="list-group ">
+                      <li class="list-group-item d-flex justify-content-center align-items-center bg-light" id="photo-order">
+                        <i class="bi bi-plus"></i>
+                      </li>
+                    </ul>
+                  </div>
+                  <div>
+                    <h5>Display</h5>
+                  </div>
                 </div>
                 <hr class="hr" />
                 <div id="custom-rates">
