--- a/P1/manage-properties.html
+++ b/P1/manage-properties.html
@@ -106,6 +106,26 @@
                 <div id="photos">
                   <div>
                     <h5>Photos</h5>
+                    <ul class="list-group ">
+                      <li class="list-group-item d-flex justify-content-center align-items-center bg-light" id="photo-order">
+                        <i class="bi bi-plus"></i>
+                      </li>
+                      <li class="list-group-item d-flex justify-content-between align-items-center" id="photo-order">
+                        cabin.jpg
+                        <input class="short-input form-control" type="number" required value="1">
+                      </li>
+                      <li class="list-group-item d-flex justify-content-between align-items-center" id="photo-order">
+                        kitchen.jpg
+                        <input class="short-input form-control" type="number" required value="2"/>
+                      </li>
+                      <li class="list-group-item d-flex justify-content-between align-items-center" id="photo-order">
+                        living-room.jpg
+                        <input class="short-input form-control" type="number" required value="3"/>
+                      </li>
+                    </ul>
+                  </div>
+                  <div>
+                    <h5>Display</h5>
                     <div id="carouselExampleFade" class="carousel slide carousel-fade ">
                       <div class="carousel-inner">
                         <div class="carousel-item active">
