add photo button selects file now

--- a/P1/add-new-property.html
+++ b/P1/add-new-property.html
@@ -107,7 +107,10 @@
                     <h5>Photos</h5>
                     <ul class="list-group ">
                       <li class="list-group-item d-flex justify-content-center align-items-center bg-light" id="photo-order">
-                        <i class="bi bi-plus"></i>
+                        <label class="custom-file-upload">
+                          <input type="file"/>
+                          <i class="bi bi-plus"></i>
+                        </label>
                       </li>
                     </ul>
                   </div>
