--- a/P1/manage-properties.html
+++ b/P1/manage-properties.html
@@ -108,7 +108,10 @@
                     <h5>Photos</h5>
                     <ul class="list-group ">
                       <li class="list-group-item d-flex justify-content-center align-items-center bg-light" id="photo-order">
-                        <i class="bi bi-plus"></i>
+                        <label class="custom-file-upload">
+                          <input type="file"/>
+                          <i class="bi bi-plus"></i>
+                        </label>
                       </li>
                       <li class="list-group-item d-flex justify-content-between align-items-center" id="photo-order">
                         cabin.jpg
